# punchard

./: .gitignore  CLAUDE.md  README.md  app.py  github_sync.py  justfile  pyproject.toml
docs/superpowers/plans/: 2026-07-01-github-tasks-inbox.md
docs/superpowers/specs/: 2026-07-01-github-tasks-inbox-design.md
scripts/: auto_stop.py  import_clockify.py  import_timewarrior.py  summary.py
static/: style.css
templates/: allocations.html  base.html  calendar.html  entries.html  index.html  macros.html  projects.html  report.html  tasks.html  tasks_browse.html
tests/: conftest.py  test_browse.py  test_github_fetch.py  test_github_parse.py  test_projects_page.py  test_reconcile.py  test_schema.py  test_task_actions.py  test_tasks_page.py
